<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_selecciona_extras"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <CheckBox
        android:id="@+id/checkBebida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_bebida"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkPapas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_papas"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkPostre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_postre"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSiguienteExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:layout_marginTop="24dp"
        android:textSize="16sp" />

</LinearLayout>